--- a/activities/slamina/index.html
+++ b/activities/slamina/index.html
@@ -10,8 +10,12 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
+
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
+
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=SPw7Yeby"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
