E3: Added a mission name and a contact code, and option to regenerate the profile

--- a/exercises/spy-profile-generator-plus/index.html
+++ b/exercises/spy-profile-generator-plus/index.html
@@ -7,6 +7,8 @@
     <title>** TOP SECRET **</title>
 
     <!-- CSS stylesheet(s) -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
