--- a/exercises/spy-profile-generator-plus/index.html
+++ b/exercises/spy-profile-generator-plus/index.html
@@ -15,6 +15,8 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
 
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=SPw7Yeby"></script>
+
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </head>
