--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -14,6 +14,8 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Character.js"></script>
+    <script src="js/scene.js"></script>
     <script src="js/script.js"></script>
   </head>
 
