--- a/activities/bubble-popper/index.html
+++ b/activities/bubble-popper/index.html
@@ -13,6 +13,9 @@
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
 
+    <!-- ml5 script(s) -->
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+
     <!-- My script(s) -->
     <script src="js/script.js"></script>
   </head>
