--- a/exercises/bubble-popper-plus-plus/index.html
+++ b/exercises/bubble-popper-plus-plus/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
+
+    <!-- p5.js -->
     <script src="js/libraries/p5.min.js"></script>
+    <!-- p5.sound -->
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- ml5.js -->
