--- a/exercises/bubble-popper-plus-plus/index.html
+++ b/exercises/bubble-popper-plus-plus/index.html
@@ -20,6 +20,7 @@
    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Bubble.js"></script>
     <script src="js/script.js"></script>
   </head>
 
