P1: Added enemies and floors

--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -15,6 +15,8 @@
 
     <!-- My script(s) -->
     <script src="js/Character.js"></script>
+    <script src="js/Enemy.js"></script>
+    <script src="js/Floor.js"></script>
     <script src="js/scene.js"></script>
     <script src="js/script.js"></script>
   </head>
