--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -14,6 +14,7 @@
     <script src="js/libraries/p5.sound.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/Food.js"></script>
     <script src="js/Character.js"></script>
     <script src="js/Enemy.js"></script>
     <script src="js/Floor.js"></script>
