--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -12,6 +12,7 @@
     <!-- Library script(s) -->
     <script src="js/libraries/p5.min.js"></script>
     <script src="js/libraries/p5.sound.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5.collide2d"></script>
 
     <!-- My script(s) -->
     <script src="js/Food.js"></script>
