P1: Created a rectangle object that is drawn above characters to detect collisions

--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5.collide2d"></script>
 
     <!-- My script(s) -->
+    <script src="js/Rectangle.js"></script>
     <script src="js/Food.js"></script>
     <script src="js/Character.js"></script>
     <script src="js/Enemy.js"></script>
