P1: Added a home screen and a play button

--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -21,6 +21,8 @@
     <script src="js/Enemy.js"></script>
     <script src="js/Floor.js"></script>
     <script src="js/scene.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/game.js"></script>
     <script src="js/script.js"></script>
   </head>
 
