--- a/activities/haiku-generator/index.html
+++ b/activities/haiku-generator/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Haiku Generator</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <!-- CSS stylesheet(s) -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <title>Haiku Generator</title>
 
-    <!-- Library script(s) -->
-    <script src="js/libraries/p5.min.js"></script>
-    <script src="js/libraries/p5.sound.min.js"></script>
+  <!-- CSS stylesheet(s) -->
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <!-- My script(s) -->
-    <script src="js/script.js"></script>
-  </head>
+  <!-- Library script(s) -->
+  <script src="js/libraries/p5.min.js"></script>
+  <script src="js/libraries/p5.sound.min.js"></script>
 
-  <body>
-    <!-- HTML would go here if needed. -->
-  </body>
+
+</head>
+
+<body>
+  <section id="haiku">
+    <p id="line-1"></p>
+    <p id="line-2"></p>
+    <p id="line-3"></p>
+
+  </section>
+
+  <!-- My script(s) -->
+  <script src="js/script.js"></script>
+</body>
 
 </html>
