E5: Added a randomly generated title

--- a/exercises/haiku-generator-plus-plus/index.html
+++ b/exercises/haiku-generator-plus-plus/index.html
@@ -19,6 +19,9 @@
 
 <body>
   <section id="haiku">
+
+    <h1 id="title">Title</h1>
+
     <p id="line-1"></p>
     <p id="line-2"></p>
     <p id="line-3"></p>
