--- a/activities/raving-redactionist/index.html
+++ b/activities/raving-redactionist/index.html
@@ -19,7 +19,21 @@
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+    <section id="secret-document">
+      <h2>TOP SECRET! DO NOT DISTRIBUTE!</h2>
+
+      <p>Lorem ipsum dolor sit amet, <span class="top-secret redacted">consectetur adipiscing elit</span>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in <span class="top-secret redacted">reprehenderit</span> in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <p>Sed ut perspiciatis unde omnis iste <span class="top-secret redacted">natus</span> error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur <span class="top-secret redacted">magni dolores eos qui ratione voluptatem sequi nesciunt</span>.
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+
+      <p>Ut enim ad minima veniam, quis nostrum exercitationem <span class="top-secret redacted">ullam</span> corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
+        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+
+    </section>
   </body>
 
 </html>
