E6: Changed the subject and text, improved the presentation

--- a/exercises/raving-redactionist-plus-plus/index.html
+++ b/exercises/raving-redactionist-plus-plus/index.html
@@ -7,6 +7,7 @@
     <title>***Top secret document***</title>
 
     <!-- CSS stylesheet(s) -->
+    <link rel="preconnect" href="https://fonts.gstatic.com"> <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) -->
@@ -19,19 +20,45 @@
   </head>
 
   <body>
+
+    <header>
+      <div class="wrapper">
+        <p>SCP Foundation</p>
+      </div>
+    </header>
+
     <section id="secret-document">
-      <h2>TOP SECRET! DO NOT DISTRIBUTE!</h2>
+      <h2>SCP-096</h2>
 
       <p>
-        Lorem ipsum dolor sit amet, <span class="secret redacted">consectetur adipiscing elit</span>. Suspendisse magna nisl, feugiat a pulvinar eu, placerat consequat ante. Morbi nec sem in quam sodales luctus ullamcorper nec turpis. Duis porta tellus et quam rutrum, quis condimentum nunc viverra. Donec venenatis orci sit amet dolor pellentesque, <span class="secret redacted">a elementum orci pretium</span>. Donec ullamcorper ipsum neque. Nulla facilisi. <span class="secret redacted">Morbi fringilla tellus sed erat vestibulum, at vehicula ex aliquam</span>.
+        SCP-096 is a humanoid creature measuring approximately 2.38 meters in height.
+        Subject shows very little muscle mass, with preliminary analysis of body mass suggesting mild malnutrition.
+        Arms are grossly out of proportion with the rest of the subject's body, with an approximate length of 1.5 meters each.
+        Skin is mostly <span class="secret redacted">devoid of pigmentation</span>.
       </p>
 
       <p>
-        <span class="secret redacted">Ut consectetur cursus elit sit amet dictum</span>. Sed dictum, urna id laoreet fringilla, felis ligula interdum leo, in sagittis neque turpis sed purus. Ut lacinia posuere nunc, <span class="secret redacted">non vestibulum enim</span>. Duis ac neque at sem posuere sagittis eget id metus. Praesent porttitor nisl et eros varius cursus. Vestibulum tincidunt bibendum elit, sed pharetra quam. <span class="secret redacted">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae</span>; Curabitur ut nisi eget massa ullamcorper porta.
+        SCP-096's jaw can open to four (4) times the norm of an average human.
+        Other facial features remain similar to an average human, with the exception of the <span class="secret redacted">eyes</span>, which are also devoid of pigmentation.
+        It is not yet known whether SCP-096 is blind or not. It shows no signs of any higher brain functions, and is not considered to be sapient.
       </p>
 
       <p>
-        Cras accumsan id <span class="secret redacted">mauris et sollicitudin</span>. Ut varius tellus felis, eu lacinia massa gravida vel. Sed blandit diam vitae ipsum feugiat euismod sit amet vel neque. Praesent at dapibus velit. In tempor venenatis elit, sed pharetra sem pretium in. Sed eu arcu euismod, mattis enim ut, congue quam. <span class="secret redacted">Cras tempor, justo ac pretium egestas</span>, orci orci sodales ipsum, <span class="secret redacted">id lobortis tortor turpis quis velit</span>. Curabitur rhoncus nulla orci, non bibendum sem euismod quis. Sed a metus et sem elementum congue sit amet sit amet dolor. <span class="secret redacted">Aliquam bibendum velit id justo gravida suscipit</span>. Ut eu euismod felis. Sed in mi quis nisl aliquam interdum. Sed sit amet aliquet mi. Suspendisse quis nunc risus. Nulla facilisi. Aenean condimentum eros augue, quis dictum mi vestibulum in.
+        SCP-096 is normally extremely docile, with pressure sensors inside its cell indicating it spends most of the day pacing by the eastern wall.
+        However, when someone views SCP-096's face, whether it be directly, via video recording, or even a photograph, it will enter a stage of <span class="secret redacted">considerable emotional distress</span>.
+        SCP-096 will cover its face with its hands and begin <span class="secret redacted">screaming, crying, and babbling</span> incoherently.
+        Approximately one (1) to two (2) minutes after the first viewing, SCP-096 will begin running to the person who viewed its face (who will from this point on be referred to as SCP-096-1).
+      </p>
+
+      <p>
+        Documented speeds have varied from thirty-five (35) km/h to <span class="secret redacted">126 km/h</span>, and seems to depend on distance from SCP-096-1. At this point, no known material or method can impede SCP-096's progress.
+        The actual position of SCP-096-1 does not seem to affect SCP-096's response; it seems to have an innate sense of <span class="secret redacted">SCP-096-1's location</span>.
+        Note: This reaction does not occur when viewing artistic depictions (see Document <span class="secret redacted">096-1</span>).
+      </p>
+
+      <p>
+        Upon arriving at SCP-096-1's location, SCP-096 will proceed to <span class="secret redacted">kill and [DATA EXPUNGED]</span> SCP-096-1. <span class="secret redacted">100</span>% of cases have left no traces of SCP-096-1.
+        SCP-096 will then sit down for several minutes before regaining its composure and becoming docile once again. It will then attempt to make its way back to its natural habitat.
       </p>
 
     </section>
