E6: Added an ending when all the secret text has been revealed

--- a/exercises/raving-redactionist-plus-plus/index.html
+++ b/exercises/raving-redactionist-plus-plus/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>***Top secret document***</title>
+    <title>***Top secret SCP File***</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="preconnect" href="https://fonts.gstatic.com"> <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
@@ -23,9 +23,24 @@
 
     <header>
       <div class="wrapper">
-        <p>SCP Foundation</p>
+        <a href="https://scp-wiki.wikidot.com/" target="_blank"><p>SCP Foundation</p></a>
       </div>
     </header>
+
+    <section class="warning">
+      <div class="wrapper">
+        <h2>WARNING</h2>
+        <p>An unauthorized entity has hacked our server and is trying to reveal classified information.</p>
+        <p>All our agents must stop their assigned missions and prevent further attacks from now on.</p>
+        <p id="timeRemaining"></p>
+        <div id="clockdiv"></div>
+      </div>
+    </section>
+
+    <div id="lost">
+      <p>We have entered your database and decrypted all your files.</p>
+      <p>SURRENDER NOW!</p>
+    </div>
 
     <section id="secret-document">
       <h2>SCP-096</h2>
