--- a/exercises/raving-redactionist-plus-plus/index.html
+++ b/exercises/raving-redactionist-plus-plus/index.html
@@ -28,16 +28,18 @@
     </header>
 
     <section class="warning">
-      <div class="wrapper">
-        <h2>WARNING</h2>
-        <p>An unauthorized entity has hacked our server and is trying to reveal classified information.</p>
-        <p>All our agents must stop their assigned missions and prevent further attacks from now on.</p>
-        <p id="timeRemaining"></p>
-        <div id="clockdiv"></div>
+      <div class="wrapper flexbox">
+        <div class="flexbox column text">
+          <h2>WARNING</h2>
+          <p>An unauthorized entity has hacked our server and is trying to reveal classified information.</p>
+          <p>All our agents must stop their assigned missions and prevent further attacks from now on.</p>
+        </div>
+        <img src="assets/images/warning.png" alt="Warning sign">
       </div>
     </section>
 
     <div id="lost">
+      <img src="assets/images/came-in-peace.png" alt="Alien saying came in peace">
       <p>We have entered your database and decrypted all your files.</p>
       <p>SURRENDER NOW!</p>
     </div>
