E7: Changed the text and the secret message
I used Edgar Allan Poe's poem "A Valentine".

--- a/exercises/code-taker-plus-plus/index.html
+++ b/exercises/code-taker-plus-plus/index.html
@@ -20,34 +20,42 @@
 
   <!-- The poem, secret letters are in spans with class "secret" -->
   <section id="poem">
-    <h2><span class="secret">T</span>his Is Just To Say</h2>
+    <h2><em>A Valentine</em></h2>
     <p>
-      I <span class="secret">h</span>ave eaten<br />
-      the plums<br />
-      that wer<span class="secret">e</span> in<br />
-      the icebox
+      <span class="secret">F</span>or her this rhyme is penned, whose luminous eyes,<br />
+      B<span class="secret">r</span>ightly expressive as the twins of Leda,<br />
+      Sh<span class="secret">a</span>ll find her own sweet name, that nestling lies<br />
+      Upo<span class="secret">n</span> the page, enwrapped from every reader.<br />
+      Sear<span class="secret">c</span>h narrowly the lines!- they hold a treasure<br />
+      Divin<span class="secret">e</span>- a talisman- an amulet<br />
+      That mu<span class="secret">s</span>t be worn at heart. Search well the measure-
     </p>
     <p>
-      and which<br />
-      you we<span class="secret">r</span>e probably<br />
-      saving<br />
-      for br<span class="secret">e</span>akfast
+      The word<span class="secret">s</span>- the syllables! Do not forget<br />
+      The trivi<span class="secret">a</span>lest point, or you may lose your labor<br />
+      And yet the<span class="secret">r</span>e is in this no Gordian knot<br />
+      Which one mi<span class="secret">g</span>ht not undo without a sabre,<br />
+      If one could m<span class="secret">e</span>rely comprehend the plot.<br />
+      Enwritten upo<span class="secret">n</span> the leaf where now are peering<br />
+      Eyes scintilla<span class="secret">t</span>ing soul, there lie perdus
     </p>
     <p>
-      Forgive <span class="secret">m</span>e<br />
-      they were del<span class="secret">i</span>cious<br />
-      so sweet<br />
-      a<span class="secret">n</span>d so cold
+      Three eloquent w<span class="secret">o</span>rds oft uttered in the hearing<br />
+      Of poets, by poets- a<span class="secret">s</span> the name is a poet’s, too,<br />
+      Its letters, althou<span class="secret">g</span>h naturally lying<br />
+      Like the knight Pint<span class="secret">o</span>- Mendez Ferdinando-<br />
+      Still form a synonym f<span class="secret">o</span>r Truth- Cease trying!<br />
+      You will not read the ri<span class="secret">d</span>dle, though you do the best you can do.
     </p>
-    <h4>William Carlos Williams</h4>
+    <h4>Edgar Allan Poe</h4>
   </section>
 
   <!-- The secret answer area-->
   <section id="answer"></section>
 
-  <div id="solved-dialog" title="Da Vinci?!">
+  <div id="solved-dialog" title="You solved the mystery!">
     <p>
-      You are soooooo smart!
+      Poe was rumored to have shared a literary courtship with Frances Sargent Osgood that eventually led to a series of scandals.
     </p>
   </div>
 
