E7: Added a sound when the user discovers the secret message

--- a/exercises/code-taker-plus-plus/index.html
+++ b/exercises/code-taker-plus-plus/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.11.4/themes/base/jquery-ui.css" />
+  <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/overcast/jquery-ui.css" />
 
   <!-- Library script(s) -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -73,6 +73,9 @@
     </p>
   </div>
 
+  <audio id="bells">
+    <source src="assets/sounds/bells.mp3" type="audio/mpeg">
+  </audio>
   <!-- My script(s) -->
   <script src="js/script.js"></script>
 </body>
