--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -19,8 +19,13 @@
     <!-- ml5.js -->
    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
+   <!-- annyang -->
+   <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+
     <!-- My script(s) -->
     <script src="js/Equation.js"></script>
+    <script src="js/pushTheEquations.js"></script>
+    <script src="js/sayTheColour.js"></script>
     <script src="js/script.js"></script>
   </head>
 
