P2: Started the creation of the memory game
First steps of the memory game: random words are displayed and disappear in 5 seconds.

--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -26,6 +26,7 @@
     <script src="js/Equation.js"></script>
     <script src="js/pushTheEquations.js"></script>
     <script src="js/sayTheColour.js"></script>
+    <script src="js/memory.js"></script>
     <script src="js/script.js"></script>
   </head>
 
