P2: Created functional buttons on the title page

--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -23,6 +23,7 @@
    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 
     <!-- My script(s) -->
+    <script src="js/title.js"></script>
     <script src="js/Equation.js"></script>
     <script src="js/pushTheEquations.js"></script>
     <script src="js/sayTheColour.js"></script>
