P2: Added a README file and completed the memory game

--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Cerebral Training Game</title>
+    <title>Selection Test for the Mars Exploration Program</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    <!-- HTML would go here if needed. -->
+
   </body>
 
 </html>
