P2: Added the final game, added comments, fixed bugs

--- a/projects/project2/final/index.html
+++ b/projects/project2/final/index.html
@@ -28,6 +28,8 @@
     <script src="js/pushTheEquations.js"></script>
     <script src="js/sayTheColour.js"></script>
     <script src="js/memory.js"></script>
+    <script src="js/superFocusElement.js"></script>
+    <script src="js/superFocus.js"></script>
     <script src="js/script.js"></script>
   </head>
 
